--- a/scene.yaml
+++ b/scene.yaml
@@ -1,14 +1,13 @@
 - name: Normal
   entities:
-    light.livingroom_light_group:
+    light.livingroom_lights:
       state: true
       brightness_pct: 100
       color_temp: 333
-    light.kitchen_light_group:
+    light.kitchen_lights:
       brightness_pct: 100
       color_temp: 333
       state: true
-      white_value: 255
     light.tv_backlight:
       state: true
       brightness_pct: 100
@@ -19,51 +18,48 @@
       state: true
 - name: Night
   entities:
-    light.kitchen_light_group:
+    light.kitchen_lights:
       state: true
-      brightness_pct: 50
-      color_name: blue
-      white_value: 1
-    light.livingroom_light_group:
+      rgb_color: [0,0,255]
+    light.livingroom_lights:
       state: true
-      brightness_pct: 20
-      color_name: blue
+      rgb_color: [0,0,255]
+    light.backroom_middle:
+      rgb_color: [0,0,255]
+      state: true
     light.tv_backlight:
       state: true
       brightness_pct: 100
       effect: Random Twinkle
     switch.livingroom_relay_1:
       state: true
+    switch.kitchen_relay_1:
+      state: true
     switch.kitchen_relay_2:
       state: true
-    light.backroom_middle:
-      state: true
-      brightness_pct: 50
-      color_name: blue
-      white_value: 1
 - name: Turn off
   entities:
-    light.kitchen_light_group: false
-    light.livingroom_light_group: false
-    light.backroom_middle: false
+    light.kitchen_lights: false
+    light.livingroom_lights: false
+    light.backroom_lights: false
     light.tv_backlight:
       state: true
       brightness_pct: 100
       effect: Random Twinkle
 - name: All off
   entities:
-    light.backroom_light_group: false
-    light.livingroom_light_group: false
-    light.office_light_light: false
-    light.bedroom_light_group: false
-    light.craft_room: false
-    light.kitchen_light_group: false
-    light.xander_bedroom_light_light: false
-    light.lucas_bedroom: false
-    light.hall_light_group: false
-    light.entry_light_group: false
-    light.sensor_light: false
-    light.backyard_light: false
+    light.backroom_lights: false
+    light.livingroom_lights: false
+    light.office_lights: false
+    light.bedroom_lighta: false
+    light.craftroom_lights: false
+    light.kitchen_lighta: false
+    light.xander_lights: false
+    light.lucas_lights: false
+    light.hall_lights: false
+    light.entry_lights: false
+    light.carport_lights: false
+    light.backyard_lights: false
     light.tv_backlight:
       state: true
       brightness_pct: 100
