--- a/packages/kitchen.yaml
+++ b/packages/kitchen.yaml
@@ -19,12 +19,27 @@ switch:
               entity_id: light.kitchen_lights
               brightness_pct: 100
               transition: 1
-              color_temp: 370
+              color_temp: 420
         turn_off:
           service: light.turn_off
           data:
               entity_id: light.kitchen_lights
               transition: 1
+
+fan:
+  - platform: template
+    fans:
+      kitchen_fan:
+        friendly_name: "Kitchen Fan"
+        value_template: "{{ states('switch.kitchen_relay_3.state') }}"
+        turn_on:
+          service: switch.turn_on
+          data:
+            entity_id: switch.kitchen_relay_3
+        turn_off:
+          service: switch.turn_off
+          data:
+            entity_id: switch.kitchen_relay_3
 
 automation:
   - alias: Kitchen - Switch1
@@ -41,7 +56,7 @@ automation:
       data:
         transition: 1
         brightness_pct: 100
-        color_temp: 370
+        color_temp: 420
   - alias: Kitchen - Switch2
     trigger:
     - entity_id: binary_sensor.kitchen_switch2
@@ -56,7 +71,7 @@ automation:
       data:
         transition: 1
         brightness_pct: 40
-        color_temp: 370
+        color_temp: 420
   - alias: Kitchen - Switch3
     trigger:
     - entity_id: binary_sensor.kitchen_switch3
