--- a/packages/bedroom.yaml
+++ b/packages/bedroom.yaml
@@ -66,9 +66,8 @@ automation:
       data:
         entity_id: light.bedroom_lights
         brightness: 125
-        white_value: 125
         transition: 300
-        color_temp: 370
+        color_temp: 450
   - alias: Dimmer - Main Bedroom
     trigger:
     - entity_id: sensor.bedroom_dimmer_action
@@ -81,9 +80,8 @@ automation:
       service: light.turn_on
       data_template:
         transition: 1
-        brightness: 1
-        color_temp: 370
-        white_value: >
+        color_temp: 450
+        brightness: >
           {% if trigger.to_state.state == 'on-press' %} 255
           {% elif trigger.to_state.state == 'up-press' %} 125
           {% elif trigger.to_state.state == 'down-press' %} 30
@@ -102,8 +100,7 @@ automation:
       data:
         transition: 1
         brightness: 255
-        white_value: 255
-        color_temp: 370
+        color_temp: 450
     - entity_id: switch.bedroom_relay_1
       service: switch.turn_on
   - alias: Main Bedroom - Switch2
@@ -117,8 +114,7 @@ automation:
       data:
         transition: 1
         brightness: 125
-        color_temp: 370
-        white_value: 125
+        color_temp: 450
     - entity_id: switch.bedroom_relay_1
       service: switch.turn_on
   - alias: Main Bedroom - Switch3
