Move cameras to packages

--- a/packages/backyard.yaml
+++ b/packages/backyard.yaml
@@ -4,6 +4,13 @@ light:
     entities:
       - light.backyard_light_light
 
+camera:
+  - platform: generic
+    name: backyard
+    stream_source: http://192.168.86.105/videostream.asf?user=admin&pwd=&resolution=32
+    still_image_url: http://192.168.86.105/media?action=snapshot&user=admin&pwd=
+
+
 automation:
   - alias: Backdoors left open
     trigger:
