--- a/packages/livingroom.yaml
+++ b/packages/livingroom.yaml
@@ -28,6 +28,12 @@ climate:
   - platform: sensibo
     api_key: !secret sensibo_api_key
 
+camera:
+  - platform: generic
+    stream_source: rtsp://192.168.86.56:554/
+    still_image_url: http://192.168.86.56:554/snapshot
+    name: livingroom
+
 automation:
   - id: day
     alias: Time - Day
