--- a/packages/carport.yaml
+++ b/packages/carport.yaml
@@ -4,6 +4,12 @@ light:
     entities:
       - light.sensor_light
 
+camera:
+  - platform: mjpeg
+    name: carport
+    still_image_url: http://192.168.86.61/image.jpg
+    mjpeg_url: http://192.168.86.61/MJPEG.CGI
+
 switch:
   - platform: template
     switches:
