--- a/configuration.yaml
+++ b/configuration.yaml
@@ -41,6 +41,15 @@ http:
   cors_allowed_origins:
     - https://cast.home-assistant.io
 
+
+entity_controller:
+  entry_motion_light:
+    sensor: binary_sensor.entry_motion_sensor_occupancy
+    entity: light.carport_lights
+    delay: 180
+    start_time: sunset - 00:30:00
+    end_time: sunrise + 00:30:00
+    
 updater:
   include_used_components: true
     
