--- a/packages/livingroom.yaml
+++ b/packages/livingroom.yaml
@@ -188,3 +188,61 @@ automation:
       - service: notify.hangout_notify
         data:
           message: "AC turned on but door/window open"
+
+scene:
+  - name: Normal
+    entities:
+      light.livingroom_lights:
+        state: true
+        brightness_pct: 100
+        color_temp: 333
+      light.kitchen_lights:
+        brightness_pct: 100
+        color_temp: 420
+        state: true
+      light.tv_backlight:
+        state: true
+        brightness_pct: 100
+        effect: Slow Random Effect
+      switch.livingroom_relay_1:
+        state: true
+      switch.kitchen_relay_2:
+        state: true
+  - name: Night
+    entities:
+      light.kitchen_lights:
+        state: true
+        rgb_color: [0,0,60]
+        brightness_pct: 50
+      light.livingroom_a:
+        state: true
+        rgb_color: [0,0,60]
+        brightness_pct: 50
+      light.livingroom_b:
+        state: false
+      light.livingroom_side:
+        state: true
+        rgb_color: [0,0,60]
+        brightness_pct: 50
+      light.backroom_middle:
+        rgb_color: [0,0,155]
+        state: true
+      light.tv_backlight:
+        state: true
+        brightness_pct: 100
+        effect: Random Twinkle
+      switch.livingroom_relay_1:
+        state: true
+      switch.kitchen_relay_1:
+        state: true
+      switch.kitchen_relay_2:
+        state: true
+  - name: Turn off
+    entities:
+      light.kitchen_lights: false
+      light.livingroom_lights: false
+      light.backroom_lights: false
+      light.tv_backlight:
+        state: true
+        brightness_pct: 100
+        effect: Random Twinkle
