--- a/esphome/bedroomesp.yaml
+++ b/esphome/bedroomesp.yaml
@@ -6,6 +6,8 @@ esphome:
 wifi:
   ssid: !secret wifi_ssid
   password: !secret wifi_password
+  ap:
+    ssid: bedroomesp
 
 # Enable logging
 logger:
