--- a/packages/office.yaml
+++ b/packages/office.yaml
@@ -42,7 +42,7 @@ automation:
       - condition: template
         value_template: "{{ trigger.to_state.state in ['on-press', 'up-press', 'down-press', 'off-press'] }}"
     action:
-    - entity_id: switch.office_speaker
+    - entity_id: switch.powerboard_outlet_1
       service_template: >
           {% if trigger.to_state.state == 'on-press' %}switch.turn_on
           {% elif trigger.to_state.state == 'up-press' %}switch.turn_on
