--- a/packages/christmas.yaml
+++ b/packages/christmas.yaml
@@ -9,6 +9,16 @@ automation:
         service: homeassistant.turn_on
       - entity_id: switch.koganpow1
         service: homeassistant.turn_on
+      - service: homeassistant.turn_on
+        entity_id: switch.christmas_lights_bright
+  - alias: Christmas Lights Dim
+    id: christmas_lights_dim
+    trigger:
+      platform: time
+      at: '21:30'
+    action:
+      - service: homeassistant.turn_off
+        entity_id: switch.christmas_lights_bright        
   - alias: Christmas Lights off
     id: christmas_lights_off
     trigger:
@@ -35,3 +45,56 @@ automation:
     action:
       - entity_id: switch.christmas_tree
         service: homeassistant.turn_off
+
+sensor:
+  - platform: mqtt
+    name: "FPP Repeat Status"
+    state_topic: "hassio/falcon/player/FPP/playlist/repeat/status"
+  - platform: mqtt
+    name: "FPP Status"
+    state_topic: "hassio/falcon/player/FPP/status"
+  - platform: mqtt
+    name: "FPP Brightness"
+    state_topic: "hassio/falcon/player/FPP/Brightness"
+
+light:
+  - platform: template
+    lights:
+      christmas_lights:
+        friendly_name: "Christmas Lights"
+        value_template: >-
+          {% if is_state('sensor.fpp_status','idle') %}
+            off
+          {% else %}
+            on
+          {% endif %}
+        turn_on:
+          - service: mqtt.publish
+            data:
+              topic: "hassio/falcon/player/FPP/set/playlist/2019/start"
+              payload: ""
+          - service: mqtt.publish
+            data:
+              topic: "hassio/falcon/player/FPP/set/playlist/2019/repeat"
+              payload: ""
+        turn_off:
+          - service: mqtt.publish
+            data:
+              topic: "hassio/falcon/player/FPP/set/playlist/2019/stop/now"
+              payload: ""
+
+switch:
+  - platform: template
+    switches:
+      christmas_lights_bright:
+        value_template: "{{ is_state('sensor.fpp_brightness','100') }}"
+        turn_on:
+          service: mqtt.publish
+          data:
+            topic: "hassio/falcon/player/FPP/Brightness"
+            payload: "100"
+        turn_off:
+          service: mqtt.publish
+          data:
+            topic: "hassio/falcon/player/FPP/Brightness"
+            payload: "50"
