--- a/esphome/backroom.yaml
+++ b/esphome/backroom.yaml
@@ -13,6 +13,11 @@ logger:
 # Enable Home Assistant API
 api:
 
+mqtt:
+  broker: 192.168.86.2
+  username: !secret mqtt_username
+  password: !secret mqtt_password
+
 ota:
 
 switch:
@@ -40,17 +45,38 @@ binary_sensor:
       number: GPIO16
       inverted: True
     name: "Backroom Switch1"
+    on_press:
+      then:
+        - mqtt.publish:
+            topic: Backroom_Left/cmnd/POWER
+            payload: "ON"
+        - mqtt.publish:
+            topic: Backroom_Middle/cmnd/POWER
+            payload: "ON"
+        - mqtt.publish:
+            topic: Backroom_Right/cmnd/POWER
+            payload: "ON"
   - platform: gpio
     pin:
       number: GPIO5
       inverted: True
     name: "Backroom Switch2"
-    on_click:
+    on_press:
       switch.toggle: relay1
   - platform: gpio
     pin:
       number: GPIO4
       inverted: True
     name: "Backroom Switch3"
-    on_click:
-      switch.turn_off: relay1
+    on_press:
+      then:
+        - switch.turn_off: relay1
+        - mqtt.publish:
+            topic: Backroom_Left/cmnd/POWER
+            payload: "OFF"
+        - mqtt.publish:
+            topic: Backroom_Middle/cmnd/POWER
+            payload: "OFF"
+        - mqtt.publish:
+            topic: Backroom_Right/cmnd/POWER
+            payload: "OFF"
