--- a/esphome/entry.yaml
+++ b/esphome/entry.yaml
@@ -13,6 +13,11 @@ logger:
 # Enable Home Assistant API
 api:
 
+mqtt:
+  broker: 192.168.86.2
+  username: !secret mqtt_username
+  password: !secret mqtt_password
+
 ota:
 
 switch:
@@ -36,16 +41,19 @@ binary_sensor:
       number: GPIO16
       inverted: True
     name: "Entry Switch1"
-    on_click:
+    on_press:
       then:
         - switch.turn_on: relay1
         - switch.turn_on: relay2
+        - mqtt.publish:
+            topic: "zigbee2mqtt/Entry Light/set"
+            payload: '{"state": "toggle"}'
   - platform: gpio
     pin:
       number: GPIO5
       inverted: True
     name: "Entry Switch2"
-    on_click:
+    on_press:
       then:
         - switch.turn_on: relay1
         - switch.turn_on: relay2
