--- a/esphome/hallway.yaml
+++ b/esphome/hallway.yaml
@@ -13,6 +13,11 @@ logger:
 # Enable Home Assistant API
 api:
 
+mqtt:
+  broker: 192.168.86.2
+  username: !secret mqtt_username
+  password: !secret mqtt_password
+
 ota:
 
 switch:
@@ -40,20 +45,32 @@ binary_sensor:
       number: GPIO16
       inverted: True
     name: "Hallway Switch1"
-    on_click:
-      switch.turn_on: relay1
+    on_press:
+      then:
+        - switch.turn_on: relay1
+        - mqtt.publish:
+            topic: Hallbulb/cmnd/POWER
+            payload: "ON"
+        - mqtt.publish:
+            topic: Hallbulb/cmnd/Dimmer
+            payload: "100"
   - platform: gpio
     pin:
       number: GPIO5
       inverted: True
     name: "Hallway Switch2"
-    on_click:
+    on_press:
       switch.turn_on: relay1
   - platform: gpio
     pin:
       number: GPIO4
       inverted: True
     name: "Hallway Switch3"
+    on_press:
+      then:
+        - mqtt.publish:
+            topic: Hallbulb/cmnd/POWER
+            payload: "OFF"
     on_click:
       min_length: 2000ms
       max_length: 5000ms
