--- a/esphome/lucas.yaml
+++ b/esphome/lucas.yaml
@@ -13,6 +13,11 @@ logger:
 # Enable Home Assistant API
 api:
 
+mqtt:
+  broker: 192.168.86.2
+  username: !secret mqtt_username
+  password: !secret mqtt_password
+
 ota:
 
 switch:
@@ -40,24 +45,39 @@ binary_sensor:
       number: GPIO16
       inverted: True
     name: "Lucas Switch1"
-    on_click:
+    on_press:
       then:
         - switch.turn_on: relay1
+        - mqtt.publish:
+            topic: Lucas/cmnd/Dimmer
+            payload: "100"
+        - mqtt.publish:
+            topic: Lucas/cmnd/POWER
+            payload: "ON"
   - platform: gpio
     pin:
       number: GPIO5
       inverted: True
     name: "Lucas Switch2"
-    on_click:
-      min_length: 2000ms
-      max_length: 5000ms
+    on_press:
       then:
-        - switch.turn_off: relay1
+        - switch.turn_on: relay1
+        - mqtt.publish:
+            topic: Lucas/cmnd/Dimmer
+            payload: "50"
+        - mqtt.publish:
+            topic: Lucas/cmnd/POWER
+            payload: "ON"
   - platform: gpio
     pin:
       number: GPIO4
       inverted: True
     name: "Lucas Switch3"
+    on_press:
+      then:
+        - mqtt.publish:
+            topic: Lucas/cmnd/POWER
+            payload: "OFF"
     on_click:
       min_length: 2000ms
       max_length: 5000ms
