--- a/scene.yaml
+++ b/scene.yaml
@@ -3,7 +3,7 @@
     light.backroom_lights: false
     light.livingroom_lights: false
     light.office_lights: false
-    light.bedroom_lighta: false
+    light.bedroom_lights: false
     light.craftroom_lights: false
     light.kitchen_lighta: false
     light.xander_lights: false
