--- a/esphome/hallway.yaml
+++ b/esphome/hallway.yaml
@@ -49,18 +49,25 @@ binary_sensor:
       then:
         - switch.turn_on: relay1
         - mqtt.publish:
-            topic: Hallbulb/cmnd/POWER
-            payload: "ON"
-        - mqtt.publish:
             topic: Hallbulb/cmnd/Dimmer
             payload: "100"
+        - mqtt.publish:
+            topic: Hallbulb/cmnd/POWER
+            payload: "ON"
   - platform: gpio
     pin:
       number: GPIO5
       inverted: True
     name: "Hallway Switch2"
     on_press:
-      switch.turn_on: relay1
+      then:
+        - switch.turn_on: relay1
+        - mqtt.publish:
+            topic: Hallbulb/cmnd/Dimmer
+            payload: "30"
+        - mqtt.publish:
+            topic: Hallbulb/cmnd/POWER
+            payload: "ON"
   - platform: gpio
     pin:
       number: GPIO4
