Redo sensor light to use relay instead

--- a/esphome/sensorlight.yaml
+++ b/esphome/sensorlight.yaml
@@ -13,10 +13,6 @@ logger:
 
 ota:
 
-web_server:
-  css_url: https://home.adebenham.com:8123/local/esphome/webserver-v1.min.css
-  js_url: https://home.adebenham.com:8123/local/esphome/webserver-v1.min.css
-
 binary_sensor:
   - platform: gpio
     pin:
@@ -32,6 +28,7 @@ light:
     name: "Sensor Light"
     id: lights
     output: relay
+    restore_mode: ALWAYS_ON
     
 output:
   - platform: gpio
