--- a/esphome/kitchen.yaml
+++ b/esphome/kitchen.yaml
@@ -49,20 +49,14 @@ binary_sensor:
         - switch.turn_on: relay1
         - switch.turn_on: relay2
         - mqtt.publish:
-            topic: Kitchen_Back/cmnd/Dimmer
-            payload: "100"
+            topic: Kitchen_Back/cmnd/Backlog
+            payload: "CT 370; Dimmer 100; POWER ON"
         - mqtt.publish:
-            topic: Kitchen_Front/cmnd/Dimmer
-            payload: "100"
-        - mqtt.publish:
-            topic: Kitchen_Back/cmnd/POWER
-            payload: "ON"
-        - mqtt.publish:
-            topic: Kitchen_Front/cmnd/POWER
-            payload: "ON"
+            topic: Kitchen_Front/cmnd/Backlog
+            payload: "CT 370; Dimmer 100; POWER ON"
         - mqtt.publish:
             topic: "zigbee2mqtt/Kitchen Counter/set"
-            payload: '{"state": "on", "brightness": "255"}'
+            payload: '{"state": "on", "brightness": "255", "color_temp": "350"}'
   - platform: gpio
     pin:
       number: GPIO5
@@ -73,20 +67,14 @@ binary_sensor:
         - switch.turn_on: relay1
         - switch.turn_on: relay2
         - mqtt.publish:
-            topic: Kitchen_Back/cmnd/Dimmer
-            payload: "40"
+            topic: Kitchen_Front/cmnd/Backlog
+            payload: "CT 370; Dimmer 40; POWER ON"
         - mqtt.publish:
-            topic: Kitchen_Front/cmnd/Dimmer
-            payload: "40"
-        - mqtt.publish:
-            topic: Kitchen_Back/cmnd/POWER
-            payload: "ON"
-        - mqtt.publish:
-            topic: Kitchen_Front/cmnd/POWER
-            payload: "ON"
+            topic: Kitchen_Back/cmnd/Backlog
+            payload: "CT 370; Dimmer 40; POWER ON"
         - mqtt.publish:
             topic: "zigbee2mqtt/Kitchen Counter/set"
-            payload: '{"state": "on", "brightness": "90"}'
+            payload: '{"state": "on", "brightness": "90", "color_temp": "420"}'
   - platform: gpio
     pin:
       number: GPIO4
