--- a/esphome/lucas.yaml
+++ b/esphome/lucas.yaml
@@ -49,11 +49,8 @@ binary_sensor:
       then:
         - switch.turn_on: relay1
         - mqtt.publish:
-            topic: Lucas/cmnd/Dimmer
-            payload: "100"
-        - mqtt.publish:
-            topic: Lucas/cmnd/POWER
-            payload: "ON"
+            topic: Lucas/cmnd/Backlog
+            payload: "CT 370; Dimmer 100; POWER ON"
   - platform: gpio
     pin:
       number: GPIO5
@@ -63,11 +60,8 @@ binary_sensor:
       then:
         - switch.turn_on: relay1
         - mqtt.publish:
-            topic: Lucas/cmnd/Dimmer
-            payload: "50"
-        - mqtt.publish:
-            topic: Lucas/cmnd/POWER
-            payload: "ON"
+            topic: Lucas/cmnd/Backlog
+            payload: "CT 370; Dimmer 50; POWER ON"
   - platform: gpio
     pin:
       number: GPIO4
